Update image source to use relative path

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
     </STYLE>
     <body> 
-        <img src="S:\portfolio\Screenshot 2025-12-15 185637.jpg", class="responsive">
+        <img src="me.jpg", class="responsive">
         <script>
             function responsive(){
                width:"50";
