--- a/achievements.html
+++ b/achievements.html
@@ -130,7 +130,7 @@
 
     <script>
         function goBack(){
-            window.location.href = "first.html";
+            window.location.href = "index.html";
         }
     </script>
 
