--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         <p class="info">📧 Email: <b>sathishkumarsk2210@gmail.com</b></p>
         <p class="info">📍 Location:<b> Tamil Nadu, India</b></p>
 
-        <a href="first.html">
+        <a href="index.html">
             <button>Back to Home</button>
         </a>
     </div>
