--- a/education.html
+++ b/education.html
@@ -145,7 +145,7 @@
 
     <script>
         function goBack(){
-            window.location.href = "first.html";
+            window.location.href = "index.html";
         }
     </script>
 
