--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                hieght:"50";
             }
             function back(){
-                window.location.href="first.html";
+                window.location.href="index.html";
             }
         </script>
         <p>   Computer Science student with a good understanding of programming concepts. Passionate about learning and applying new technologies. Eager to work in a professional environment and enhance technical skills. <u> portfolio</u></p>
