--- a/projects.html
+++ b/projects.html
@@ -167,7 +167,7 @@
 
     <script>
         function goBack(){
-            window.location.href = "first.html";
+            window.location.href = "index.html";
         }
     </script>
 
