--- a/skills.html
+++ b/skills.html
@@ -142,7 +142,7 @@
 
     <script>
         function goBack(){
-            window.location.href = "first.html";
+            window.location.href = "index.html";
         }
     </script>
 
